Added plugin reloading option